fix: delete align-items from .card__wrap

--- a/css/awesome.css
+++ b/css/awesome.css
@@ -39,7 +39,6 @@
 .card__wrap {
     display: flex;
     justify-content: space-between;
-    align-items: center;
 }
 
 .card-item {
